# dory

./: .gitattributes  .gitignore  README.md  meson.build
meta/: environment.sh
src/: main.cpp  meson.build
src/CLI/: ArgumentParser.cpp
src/Core/: File.cpp  File.h  Forward.h  Json.cpp  Json.h  MappedFile.cpp  MappedFile.h  System.cpp  System.h  TCPClientConnection.cpp  TCPClientConnection.h  TCPListener.cpp  TCPListener.h  meson.build
src/HTML/: Headers.cpp  Headers.h  meson.build
src/HTTP/: Headers.cpp  Headers.h  Request.cpp  Request.h  Response.cpp  Response.h  meson.build
src/Main/: Main.cpp
src/Mem/: AddressSpace.cpp
src/Net/: TCPClientConnection.cpp  TCPClientConnection.h  TCPConnection.cpp  TCPConnection.h  TCPListener.cpp  TCPListener.h  meson.build
src/Ty/: Assert.h  ErrorOr.h  Formatter.h  Forward.h  Json.cpp  Json.h  Limits.h  LinearMap.h  Optional.h  Parse.cpp  StringBuffer.h  StringView.cpp  StringView.h  System.cpp  Vector.h  View.h  meson.build
src/Web/: File.cpp  File.h  FileRouter.cpp  FileRouter.h  MimeType.cpp  MimeType.h  meson.build
static/: index.html  manifest.json
static/error/: 404.html
static/json/: foo.json
